2025-09-03  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to fetch notes (Bug 509062).

2025-08-31  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to update via OLID, if available (Bug 508897).
	* Added importer for OnMyShelf JSON files.

2025-08-30  Robby Stephenson  <robby@periapsis.org>

	* Added KDE shortcut keys for previous/next tab (Bug 508789).

2025-08-24  Robby Stephenson  <robby@periapsis.org>

	* Updated GCstar importer to read external collection models (Bug 508664).
	* Added option for image links to GCstar importer (Bug 508665).
	* Updated CSV importer to load images.
	* Added option for image links to CSV importer (Bug 508666).

2025-08-21  Robby Stephenson  <robby@periapsis.org>

	* Added configurable image size to OpenLibrary data source.

2025-08-19  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to find covers for books without ISBN (Bug 507912).

2025-08-04  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 4.1.3.

2025-07-24  Robby Stephenson  <robby@periapsis.org>

	* Updated SRU fetcher to allow POST requests (Bug 507265).
	* Updated SRU fetcher to recognize alternate Dublin Core schema.

2025-06-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with reporting correct image location.

2025-05-25  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to fetch work author (Bug 504586).

2025-05-11  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 4.1.2.

2025-05-10  Robby Stephenson  <robby@periapsis.org>

	* Updated VideoGameGeek data source.
	* Updated Kino.de data source.

2025-05-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with showing local image by link only (Bug 503645).

2025-05-04  Robby Stephenson  <robby@periapsis.org>

	* Updated GiantBomb data source.

2025-03-08  Robby Stephenson  <robby@periapsis.org>

	* Added Metron data source.

2025-02-10  Robby Stephenson  <robby@periapsis.org>
